# EvoEngine-RayTracer-Archived

./: .codedocs  .gitignore  CMakeLists.txt  README.md
cmake/: FindOptiX.cmake
include/lib/MLVQ/: BTFBase.cuh  BTFMeshRenderer.hpp  CIELab.cuh  CompressedBTF.hpp  IndexAB.cuh  PDF1D.cuh  PDF2D.cuh  PDF3D.cuh  PDF4D.cuh  PDF6D.cuh  SharedCoordinates.cuh  VectorColor.cuh
include/lib/RayTracer/: BSDF.cuh  BSSDF.cuh  CUDABuffer.hpp  CUDAModule.hpp  CurveSplineDefinations.hpp  Enums.hpp  Environment.cuh  HitInfo.hpp  LinearCongruenceGenerator.hpp  RayDataDefinations.hpp  RayFunctions.cuh  RayTracer.hpp  RayTracerCamera.hpp  RayTracerLayer.hpp  RayTracerUtilities.cuh  VulkanInterlop.hpp
include/lib/Utilities/: BasicPointCloudScanner.hpp  LightProbeGroup.hpp  PointCloudScanner.hpp  TriangleIlluminationEstimator.hpp
src/app/: Application.cpp
src/lib/: BasicPointCloudScanner.cpp  CUDABuffer.cpp  CUDAModule.cpp  LightProbeGroup.cpp  PointCloudScanner.cpp  RayTracer.cu  RayTracerCamera.cpp  RayTracerLayer.cpp  TriangleIlluminationEstimator.cpp  VulkanInterlop.cpp
src/lib/MLVQ/: BTFMeshRenderer.cpp  CompressedBTF.cpp
src/lib/ptx/: CameraRendering.cu  IlluminationEstimation.cu  PointCloudScanning.cu
